# mlservice-tabular

./: .dockerignore  .gitignore  DEVELOPER_GUIDE.md  Dockerfile  README.md  pyproject.toml
mlservice_tabular/: __init__.py  main.py
mlservice_tabular/dl/: __init__.py  tabpfn_classification.py
mlservice_tabular/gbm/: __init__.py  lightgbm_classification.py  lightgbm_regression.py  xgboost_classification.py  xgboost_regression.py
mlservice_tabular/sklearn/: __init__.py  lasso.py  logistic.py  tab_model.py
mlservice_tabular/sklearn_model/: __init__.py  random_forest.py  random_forest_classification.py  random_forest_regression.py  ridge.py
tests/: test_logistic_model.py  test_ridge_model.py  test_tab_model.py
tests/mlservice_tabular/dl/: test_tabpfn_classification.py
tests/mlservice_tabular/gbm/: test_lightgbm_classification.py  test_lightgbm_regression.py  test_xgboost_classification.py  test_xgboost_regression.py
tests/mlservice_tabular/sklearn/: test_lasso.py
tests/mlservice_tabular/sklearn_model/: test_lasso.py  test_logistic.py  test_random_forest.py  test_random_forest_classification.py  test_random_forest_regression.py  test_ridge.py
